buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net/' }
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1.65', changing: true
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'idea'
apply plugin: 'maven-publish'
apply plugin: 'net.minecraftforge.gradle'
apply plugin: 'org.spongepowered.mixin'

version = mod_version
group = mod_group_id
archivesBaseName = 'ExtendedAE'

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

minecraft {
    mappings channel: mapping_channel, version: mapping_version

    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.console.level', 'info'
            mods { expatternprovider { source sourceSets.main } }
            arg '-mixin.config=mixins.epp.json'
        }
        server {
            workingDirectory project.file('run')
            property 'forge.logging.console.level', 'info'
            mods { expatternprovider { source sourceSets.main } }
            arg '-mixin.config=mixins.epp.json'
        }
        data {
            workingDirectory project.file('run')
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
            mods { expatternprovider { source sourceSets.main } }
        }
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

repositories {
    mavenCentral()
    maven { url = 'https://modmaven.dev/' }
    maven { url = 'https://maven.blamejared.com/' }
    maven {
        url = 'https://cursemaven.com'
        content { includeGroup 'curse.maven' }
    }
    maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    implementation fg.deobf("appeng:appliedenergistics2:${ae2_version}")
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    compileOnly fg.deobf('mezz.jei:jei-1.16.5:7.8.0.1012')
}

mixin {
    add sourceSets.main, 'mixins.epp.refmap.json'
    config 'mixins.epp.json'
}

processResources {
    inputs.property 'version', project.version
    filesMatching('META-INF/mods.toml') {
        expand project.properties
    }
}

jar {
    manifest {
        attributes([
                'Specification-Title': mod_name,
                'Specification-Vendor': mod_authors,
                'Specification-Version': '1',
                'Implementation-Title': project.name,
                'Implementation-Version': project.version,
                'Implementation-Vendor': mod_authors,
                'MixinConfigs': 'mixins.epp.json'
        ])
    }
}

jar.finalizedBy('reobfJar')

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}
